[#1179] feat(build): Make Gravitino build and run against JDK8, 11, 17 (#1199)
### What changes were proposed in this pull request?

This PR proposes to add multiple JDK version support for building and
running Gravitino server, including JDK8, 11, and 17.

Users could specify the version they want to build in
`gradle.properties`, like:

```
jdkVersion = 8

or 

jdkVersion = 11

or 

jdkVersion = 17
```

Or users could specify the version by `./gradlew build -PjdkVersion=8`.

Our generated jars are JDK 8 version compatible, so it can run against
Java runtime 8, 11, and 17.

### Why are the changes needed?

To make Gravitino build, test and run against multiple JDK versions.

Fix: #1179 

### Does this PR introduce _any_ user-facing change?

No.

### How was this patch tested?

This was compiled, tested, run on JDK8, 11, and 17 locally.